--- a/backend/api/requirements.txt
+++ b/backend/api/requirements.txt
@@ -1,6 +1,128 @@
-
-transformers
-pytube
-numpy
-Flask
-Flask-Cors
+aiohttp==3.9.3
+aiosignal==1.3.1
+aniso8601==9.0.1
+annotated-types==0.6.0
+anyio==4.3.0
+appnope==0.1.4
+asttokens==2.4.1
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+datasets==2.18.0
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+distro==1.9.0
+docopt==0.6.2
+executing==2.0.1
+fastjsonschema==2.19.1
+ffmpeg==1.4
+filelock==3.13.1
+firebase==4.0.1
+Flask==3.0.0
+Flask-Cors==4.0.0
+Flask-RESTful==0.3.10
+frozenlist==1.4.1
+fsspec==2024.2.0
+gcloud==0.18.3
+google-api-core==2.17.1
+google-auth==2.29.0
+google-cloud-core==2.4.1
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
+gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.4
+httplib2==0.22.0
+httpx==0.27.0
+huggingface-hub==0.21.3
+idna==3.6
+ipython==8.12.3
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+llvmlite==0.42.0
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mistune==3.0.2
+more-itertools==10.2.0
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+nbclient==0.10.0
+nbconvert==7.16.2
+nbformat==5.10.3
+networkx==3.2.1
+numba==0.59.0
+numpy==1.26.4
+oauth2client==4.1.3
+openai==1.13.3
+openai-whisper==20231117
+packaging==23.2
+pandas==2.2.1
+pandocfilters==1.5.1
+parso==0.8.3
+pexpect==4.9.0
+pickleshare==0.7.5
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==15.0.0
+pyarrow-hotfix==0.6
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.6.3
+pydantic_core==2.16.3
+pydub==0.25.1
+Pygments==2.17.2
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytube==15.0.0
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==25.1.2
+referencing==0.34.0
+regex==2023.12.25
+requests==2.31.0
+rpds-py==0.18.0
+rsa==4.9
+safetensors==0.4.2
+six==1.16.0
+sniffio==1.3.1
+sounddevice==0.4.6
+soupsieve==2.5
+stack-data==0.6.3
+sympy==1.12
+tiktoken==0.6.0
+tinycss2==1.2.1
+tokenizers==0.15.2
+torch==2.2.1
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.2
+transformers==4.38.2
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.0.1
+xxhash==3.4.1
+yarg==0.1.9
+yarl==1.9.4
